@@ -1,7 +1,7 @@
 #/bin/sh
 
 package=ffl
-version=0.1.6
+version=0.1.7
 
 dest=${package}-${version}
 
