@@ -3,3 +3,4 @@
 str.fs: 21120
 tis.fs: 24640
 tos.fs: 26476
+bar.fs: 29596
